--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h1 class="email">mrdiego184@gmail.com</h1>
     </div>
 
-       <div class="curriculo"> <a class="downloadcv" href="curriculodiego.pdf" download>
+       <div class="curriculo"> <a target ="_blank" class="downloadcv" href="curriculodiego.pdf" download>
            <span>DOWNLOAD CURRÍCULO - PDF</span>
            <img id="baixaki" src="https://www.freeiconspng.com/uploads/white-download-icon-png-32.png">
         </a>
